Se agregaron etiquetas <meta>

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Brick Breaker</title>
+    <meta content="Agostina Blason" name="autor">
+    <meta content="Roy Kostrun" name="autor">
+    <meta content="ladrillos, pelota, barra, niveles" name="palabras-clave">
+    <meta>
 </head>
 <body>
 
