--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta>
 </head>
 <body>
-
+  <header> <h1>Brick Breaker</h1> </header>
+    <nav> </nav>
+     <section>  </section>
 </body>
 </html>
