Se agregaron etiquetas semanticas

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta content="Agostina Blason" name="autor">
     <meta content="Roy Kostrun" name="autor">
     <meta content="ladrillos, pelota, barra, niveles" name="palabras-clave">
-    <meta>
+    <link rel="stylesheet" href="nuestrosEstilos.css" type="text/css">
 </head>
 <body>
+  <img src="Imagenes/logo-brick_breaker.png">
   <header> <h1>Brick Breaker</h1> </header>
     <nav> </nav>
      <section>  </section>
