--- a/index.html
+++ b/index.html
@@ -7,11 +7,72 @@
     <meta content="Roy Kostrun" name="autor">
     <meta content="ladrillos, pelota, barra, niveles" name="palabras-clave">
     <link rel="stylesheet" href="nuestrosEstilos.css" type="text/css">
+
+    <style>
+
+    </style>
 </head>
 <body>
-  <img src="Imagenes/logo-brick_breaker.png">
-  <header> <h1>Brick Breaker</h1> </header>
-    <nav> </nav>
-     <section>  </section>
+ <canvas id="myCanvas" width="1342" height="900" style="border: 1px solid #d3d3d3">
+
+ </canvas>
+  <img src="Imagenes/logo4-brickbreaker.jpg" width="175" height="175" style="position: absolute; top: 10px;left: 100px; border: ridge yellow 5px" mar>
+  <!--<header> <h1>Brick Breaker</h1> </header>
+
+  from the table we have this: border: 1px solid #000000; -->
+
+  <center>
+      <p class="Borde">
+             <h1 style="color: yellow;position: absolute; top: 10px; right: 410px; border: ridge yellow 3px">
+              <header>BRICK BREAKER</header>
+             </h1>
+          </p>
+  </center>
+
+    <center><nav>
+        <a href="pagina1.html" style="color: aliceblue; position: absolute; top: 300px; right: 860px">
+            Inicie
+        </a>
+      </nav>
+     </center>
+
+
+     <section>
+        <div class="Reglas">
+               <p st>
+
+                   <ul style="color: white;position: absolute;top: 205px;right: 290px"> Reglas: </ul>
+
+               </p>
+
+        </div>
+          <div>
+           <table>
+               <tr>
+                   <td style="color: yellow; position: absolute;top: 270px;right: 120px;  text-indent: -2em;">
+                       - Utilice < > para mover la barra </td>
+               </tr>
+               <tr>
+                   <td style="color: yellow; position: absolute;top: 300px;right: -3px;text-indent: -2em;">
+                       - Pulse la barra espaciadora para disparar la bola
+                   </td>
+               </tr>
+           </table>
+
+
+          </div>
+           <div>
+               <form id="suscripcion_usuario">
+                   <p>
+                         <label style="color: white; position: absolute;top: 240px;right: 830px" for="nombre">
+                           Nombre:
+                         </label>
+                       <input type="text" name="nombre" placeholder="Nombre" id="nombre" style="color: black; position: absolute;top: 240px;right: 535px">
+                   </p>
+               </form>
+
+           </div>
+
+     </section>
 </body>
 </html>
