Agregue ediciones a las segunda hoja de mi pagina

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             </p>
           </form>
         </div>
-
+       <section style="border: ridge yellow 4px">
        <p class="mail" style="color: white; position: absolute;top: 600px;right: 920px" for="nombre">
            Mail:  2116571@ucc.edu.ar
        </p>
        <p class="contact" style="color: white; position: absolute;top: 670px;right: 1130px" for="nombre">
            Contacto
        </p>
-
+       </section>
   </body>
 </html>
