Comenté unas lineas de codigo en pagina1.html

--- a/pagina1.html
+++ b/pagina1.html
@@ -33,8 +33,8 @@
            <h2 class="nombre juego"> Vidas</h2>
        </a>
        <nav> <!--
-           <a href="" class="nav:link"> Inicio </a>
-           <a href="" class="nav:link"> Nosotros </a>
+           <a href="" class="nav:link"> Puntos </a>
+           <a href="" class="nav:link"> Nivel </a>
            <a href="" class="nav:link"> Contacto </a>-->
        </nav>
    </header>
