--- a/pagina1.html
+++ b/pagina1.html
@@ -26,22 +26,27 @@
 <body>
 
    <header>
-       <a href="#" class="logo">
-           <!--<img src="Imagenes/logo4-brickbreaker.jpg" alt="logo del juego">  -->
+       <a href="#" class="encabezado">
            <h2 class="nombre juego"> Puntos </h2>
            <h2 class="nombre juego"> Nivel </h2>
            <h2 class="nombre juego"> Vidas</h2>
        </a>
-       <nav> <!--
-           <a href="" class="nav:link"> Puntos </a>
-           <a href="" class="nav:link"> Nivel </a>
-           <a href="" class="nav:link"> Contacto </a>-->
+       <nav>
        </nav>
    </header>
+   <nav>
+
+       <a buttom class="icono_flecha"  href="index.html" >
+           <img src="Imagenes/iconoFlecha.png">
+       </a>
+
+   </nav>
   <section id="dibujo">
       <canvas id="lienzo" width="500px" height="300">
           Su navegador no soporta el canvas
       </canvas>
+
   </section>
+
 </body>
 </html>
