--- a/pagina1.html
+++ b/pagina1.html
@@ -5,48 +5,32 @@
     <title>Brick Breaker</title>
     <meta content="Agostina Blason" name="autor">
     <meta content="Roy Kostrun" name="autor">
-    <link rel="stylesheet" href="pagina1.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
+    <link rel="stylesheet" href="./css/pagina1.css" type="text/css">
     <title>Play</title>
-    <style>
-        /* Estilo del canvas */
-       #lienzo{
-           background-color: #dc2be2;
-           display: flex;
-       }
-       section{
-           width: 500px;
-           position: absolute;
-           top: 240px;
-           right: 430px;
-           font-size: 500%;
-           border: ridge gray;
-       }
-    </style>
 </head>
 <body>
 
    <header>
-       <a href="#" class="encabezado">
            <h2 class="nombre juego"> Puntos </h2>
            <h2 class="nombre juego"> Nivel </h2>
            <h2 class="nombre juego"> Vidas</h2>
-       </a>
-       <nav>
-       </nav>
    </header>
-   <nav>
 
-       <a buttom class="icono_flecha"  href="index.html" >
-           <img src="Imagenes/iconoFlecha.png">
-       </a>
+   <main>
+        <section id="dibujo">
+            <canvas id="lienzo" width="500px" height="300">
+                Su navegador no soporta el canvas
+            </canvas>
+        </section>
+   </main>
 
-   </nav>
-  <section id="dibujo">
-      <canvas id="lienzo" width="500px" height="300">
-          Su navegador no soporta el canvas
-      </canvas>
-
-  </section>
+   <footer>
+        <a class="icono_flecha"  href="index.html" >
+            <img src="Imagenes/iconoFlecha.png">
+        </a>
+   </footer>
 
 </body>
 </html>
