nuevos cambios de lo ultimo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta content="ladrillos, pelota, barra, niveles" name="palabras-clave">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="shortcut icon" href="Imagenes/logo4-brickbreaker.jpg">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
 
     <footer>
         <p class="contacto">
-            2116571@ucc.edu.ar - 3513723648
+            2116571@ucc.edu.ar    -    3513723648
         </p>
     </footer>
 
