--- a/pagina1.html
+++ b/pagina1.html
@@ -6,8 +6,8 @@
     <meta content="Agostina Blason" name="autor">
     <meta content="Roy Kostrun" name="autor">
     <link href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
     <link rel="stylesheet" href="./css/pagina1.css" type="text/css">
+    <link rel="shortcut icon" href="Imagenes/logo4-brickbreaker.jpg">
     <title>Play</title>
 </head>
 <body>
