Ultimos cambios de la primera parte de nuestro proyecto

--- a/index.html
+++ b/index.html
@@ -12,55 +12,52 @@
 </head>
 
 <body>
-    <header>
-        <img src="Imagenes/logo4-brickbreaker.jpg" class="imagen_logo" alt=" This is a image of the logo">
-        <div>
-            <h1 class="Borde">BRICK BREAKER</h1>
+<header>
+    <img src="Imagenes/logo4-brickbreaker.jpg" class="imagen_logo" alt=" This is a image of the logo">
+    <div>
+        <h1 class="Borde">BRICK BREAKER</h1>
+    </div>
+
+    <section id="reglas">
+        <div class="Reglas">
+            <h3 class="las_Reglas"> Reglas:</h3>
+            <ol class="items_reglas">
+                <li>
+                    Pulse la barra espaciadora para disparar la bola
+                </li>
+                <li>
+                    Utilice < > para mover la barra
+                </li>
+                <li>
+                    El juego termina cuando la pelota pasa la barra
+                </li>
+            </ol>
+        </div>
+    </section>
+
+</header>
+
+<main>
+
+    <section>
+        <div id="formulario">
+            <form class="formulario" action="#" method=GET>
+                <label class="estilo_nombre" for="nombre">Nombre:</label><input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre: ">
+            </form>
         </div>
 
-        <section id="reglas">
-            <div class="Reglas">
-                    <h3 class="las_Reglas"> Reglas:</h3>
-                    <ol class="items_reglas">
-                        <li>
-                            Pulse enter para disparar
-                        </li>
-                        <li>
-                            Utilice < > para mover la barra
-                        </li>
-                        <li>
-                            Pulse la barra espaciadora para disparar la bola
-                        </li>
-                        <li>
-                            El juego termina cuando la pelota pasa la barra
-                        </li>
-                    </ol>
-            </div>
-        </section>
+        <div id="botonInicio">
+            <button class="boton" type="button"><a class="nombre_clase" href="./pagina1.html">¡INICIE!</a></button>
+        </div>
+    </section>
 
-    </header>
+</main>
 
-    <main>
-
-        <section>
-                <div id="formulario">
-                    <form class="formulario" action="#" method=GET>
-                        <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre: ">
-                    </form>
-                </div>
-
-                <div id="botonInicio">
-                    <button class="boton" type="button"><a class="nombre_clase" href="./pagina1.html">¡INICIE!</a></button>
-                </div>
-        </section>
-
-    </main>
-
-    <footer>
-        <p class="contacto">
-            2116571@ucc.edu.ar    -    3513723648
-        </p>
-    </footer>
+<footer>
+    <p><!-- class="contacto" -->
+        2116571@ucc.edu.ar - 3513723648
+    </p>
+</footer>
 
 </body>
 
