--- a/pagina1.html
+++ b/pagina1.html
@@ -28,7 +28,7 @@
 
    <footer>
         <a class="icono_flecha"  href="index.html" >
-            <img src="Imagenes/iconoFlecha.png">
+            <img src="Imagenes/iconoFlecha.png" alt="This is a image of the icon">
         </a>
    </footer>
 
