ultimos cambios realizados en el index y pagina1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Brick Breaker</title>
     <meta content="Agostina Blason" name="autor">
     <meta content="Roy Kostrun" name="autor">
+    <meta content="Web del juego: Brick Breaker">
     <meta content="ladrillos, pelota, barra, niveles" name="palabras-clave">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
