--- a/pagina1.html
+++ b/pagina1.html
@@ -5,6 +5,7 @@
     <title>Brick Breaker</title>
     <meta content="Agostina Blason" name="autor">
     <meta content="Roy Kostrun" name="autor">
+    <meta content="Web del juego: Brick Breaker">
     <link href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/pagina1.css" type="text/css">
     <link rel="shortcut icon" href="Imagenes/logo4-brickbreaker.jpg">
