cambios para el segundo parcial

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta content="Agostina Blason" name="autor">
     <meta content="Roy Kostrun" name="autor">
     <meta content="ladrillos, pelota, barra, niveles" name="palabras-clave">
+    <meta content="MI PRIMERO VIDEOJUEGO - JUEGO BÁSICO ESTILO BRICK-BREAKER" name="description">
+    <!-- <meta content="Aprendé como jugar Brick Breacker( Rompe Ladrillos )" name="description"> -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <link rel="shortcut icon" href="Imagenes/logo4-brickbreaker.jpg">
