--- a/pagina1.html
+++ b/pagina1.html
@@ -21,7 +21,7 @@
 
 <main>
     <section id="dibujo">
-        <canvas id="lienzo" width="500px" height="300">
+        <canvas id="lienzo" width="400px" height="500" >
             Su navegador no soporta el canvas
         </canvas>
     </section>
@@ -32,6 +32,8 @@
         <img src="Imagenes/iconoFlecha.png" alt="This is a image of the icon">
     </a>
 </footer>
+  <script src="game.js"></script>
+<!--  <script src="componentes.js"></script>   -->
 
 </body>
 </html>
