--- a/pagina1.html
+++ b/pagina1.html
@@ -7,16 +7,18 @@
     <meta content="Roy Kostrun" name="autor">
     <meta content="Web del juego: Brick Breaker">
     <link href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/pagina1.css" type="text/css">
     <link rel="shortcut icon" href="Imagenes/logo4-brickbreaker.jpg">
+    <script src="./css/game.js"></script>
+    <!--<script src="componentes.js"></script>-->
+    <link rel="stylesheet" href="./css/pagina1.css" type="text/css">
     <title>Play</title>
 </head>
 <body>
 
 <header>
-    <h2 class="nombre juego"> Puntos </h2>
-    <h2 class="nombre juego"> Nivel </h2>
-    <h2 class="nombre juego"> Vidas</h2>
+    <h2 class="nombreJuego"> Puntos </h2>
+    <h2 class="nombreJuego"> Nivel </h2>
+    <h2 class="nombreJuego"> Vidas</h2>
 </header>
 
 <main>
@@ -32,8 +34,6 @@
         <img src="Imagenes/iconoFlecha.png" alt="This is a image of the icon">
     </a>
 </footer>
-  <script src="game.js"></script>
-<!--  <script src="componentes.js"></script>   -->
 
 </body>
 </html>
