--- a/pagina1.html
+++ b/pagina1.html
@@ -8,7 +8,6 @@
     <meta content="Web del juego: Brick Breaker">
     <link href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="Imagenes/logo4-brickbreaker.jpg">
-    <script src="./css/game.js"></script>
     <!--<script src="componentes.js"></script>-->
     <link rel="stylesheet" href="./css/pagina1.css" type="text/css">
     <title>Play</title>
@@ -28,6 +27,8 @@
         </canvas>
     </section>
 </main>
+
+<script src="game.js"></script>
 
 <footer>
     <a class="icono_flecha"  href="index.html" >
