--- a/pagina1.html
+++ b/pagina1.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/pagina1.css" type="text/css">
     <title>Play</title>
 </head>
-<body>
+<body onload="window.alert('Bienvenido!!! Utilice las teclas < > para mover la barra')">
 
 <header>
     <h2 class="nombreJuego"> Puntos </h2>
