--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div id="botonInicio">
-            <button class="boton" type="button" onclick="validar()"><a class="nombre_clase" href="./pagina1.html">¡INICIE!</a>
+            <button class="boton" type="button" onclick="validar()"><a class="nombre_clase">¡INICIE!</a>
             </button>
         </div>
     </section>
@@ -61,7 +61,6 @@
         2116571@ucc.edu.ar - 3513723648
     </p>
 </footer>
-
 
 </body>
 
