--- a/pagina1.html
+++ b/pagina1.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="./css/pagina1.css" type="text/css">
     <title>Play</title>
 </head>
-<body onload="window.alert('Bienvenido!!! Utilice las teclas < > para mover la barra')">
 
+<body onload="welcome()">
 <header>
-    <h2 class="nombreJuego"> Puntos </h2>
-    <h2 class="nombreJuego"> Nivel </h2>
-    <h2 class="nombreJuego"> Vidas</h2>
+ <!--   <h2 class="nombreJuego"> Puntos: </h2>-->
+    <h2 class="nombreJuego"> BRICK BREAKER </h2>
+ <!--   <h2 class="nombreJuego"> Vidas: </h2>  -->
 </header>
 
 <main>
